--- a/1. compile.md
+++ b/1. compile.md
@@ -7,3 +7,12 @@ export AFL_INST_RATIO=100
 make
 
 
+- CC/ CXX = standard env variable for configuring which C/C++ compiler to use:
+
+    afl-gcc / afl-g++
+    afl-clang/afl-clang++
+    afl-clang-fast/afl-clang-fast++
+   
+- AFL_INST_RATIO - Instrumentation ratio (0 - 100%)
+- AFL_HARDEN=1 adds cloud hardening (includes -D_FORTIFY_SOURCE=2 and -fstack-protector-all)
+
