--- a/1. compile.md
+++ b/1. compile.md
@@ -1,11 +1,16 @@
 
-export CC=afl-clang-fast
-export CXX=afl-clang-fast++
-export AFL_HARDEN=1
-export AFL_INST_RATIO=100
-./configure
-make
+**export CC=afl-clang-fast
 
+**export CXX=afl-clang-fast++
+
+**export AFL_HARDEN=1
+
+**export AFL_INST_RATIO=100
+
+**./configure
+
+make**
+-----------------------------------------------------------------------------------------------
 
 - CC/ CXX = standard env variable for configuring which C/C++ compiler to use:
 
