--- a/1. compile.md
+++ b/1. compile.md
@@ -1,15 +1,16 @@
 
-**export CC=afl-clang-fast
+**export CC=afl-clang-fast**
 
-**export CXX=afl-clang-fast++
+**export CXX=afl-clang-fast++**
 
-**export AFL_HARDEN=1
+**export AFL_HARDEN=1**
 
-**export AFL_INST_RATIO=100
+**export AFL_INST_RATIO=100**
 
-**./configure
+**./configure**
 
-make**
+**make**
+
 -----------------------------------------------------------------------------------------------
 
 - CC/ CXX = standard env variable for configuring which C/C++ compiler to use:
