Update 3. Run the Fuzzer.md

--- a/3. Run the Fuzzer.md
+++ b/3. Run the Fuzzer.md
@@ -12,3 +12,11 @@ afl-fuzz -i <test cases> -o <output> -S fuzzer04 -- <binary to run> <options to 
 -m <megabytes> maz memory usage
 -t <milliseconds> timeout for each run
   
+**Output Folder**
+  
+  1. Crashes - Inputs that caused the application to crash
+  2. fuzz_bitmap - 
+  3. fuzzer_stats
+  4. hangs - Inputs that caused the application to hang
+  5. plot_data
+  6. queue - Next things that will be used to test the application
